fixed horizontal scroll

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -95,3 +95,8 @@ body {
   background: #007bb5;
   color: white;
 }
+
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
